-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.1
-
4aa1deee1 (dev), a992badd6 (6.7), 2dfd04c52 (6.6)
qmltc seems to crash when Qt.point is used as a return type in a function.
- relates to
-
QTBUG-122252 [REG: 6.4->6.5] Qt.point cannot be used as a return type
-
- Closed
-
| For Gerrit Dashboard: QTBUG-122251 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 540372,10 | qmltc/importvisitor: warn about type annotations on methods | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 544305,2 | qmltc/importvisitor: warn about type annotations on methods | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 544403,2 | qmltc/importvisitor: warn about type annotations on methods | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |